August 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added parameter IgnoreVisibility to all stack::DrawContents and their calls
	* Tweaked the number of beartraps and mines in level (now 0-4 of each)

August 8 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Carnivorous plants are now longer born inside walls nor over monsters
	* StuckTo system works better now, maybe
	* Added Duplicate() functions for character and item
	* Gauntlets and boots are now generated in pairs
	* Monsters pick up and use equipment again
	* Added cloak of invisibility
	* Invisibility is now taken into account when calculating danger

August 4 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Msgs of special items corrected
	* Success of using Whip of Calamus now depends on players relations to Calamus.
	* Wishing for "lamp" gives now an oil lamp
 	* Headless creatures don't screams
	* Backpacks work (-> Suicide dwarfs work)
	* GetDeathMessage functions changed to const
	* Bug with bitmap::DrawFlames that did funny things to the RAND() function corrected
	* Corrected a minor typo in chest
	
August 4 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Bug in poisoned fixed
	
August 4 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Mines and beartraps work well with the new system.

August 4 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Eating is no longer an evil deed

August 4 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added char* festring::IntegerToChar(long) which is a much faster
	  variant of the nonstandard itoa

August 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* SecretKnowledge's defence part now shows block info
	* Player can no longer eat scrolls, silver stones etc.
	* Eating is no more fatal

August 3 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* CanBeSeen and IsVisible systems merged together to CanBeSeen.
	* Added a lot of consts
	* Mine and bear trap pretty much recoded.

August 3 2002 Timo Kiviluoto <sonor@phpoint.fi>
